Fix avatar space alignment with long usernames

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Cursed Mastodon Twitter CSS-only revamp by @rolle@mementomori.social
-   v1.1.2rc2 */
+   v1.1.2rc3 */
 
 /* CSS variables */
 :root {
@@ -524,6 +524,8 @@ a.status-card.compact .status-card__description {
   /* Need to override inline styles */
   /* stylelint-disable-next-line */
   height: var(--size-avatar) !important;
+  /* stylelint-disable-next-line */
+  min-width: var(--size-avatar) !important;
 
   /* Need to override inline styles */
   /* stylelint-disable-next-line */
